Menu Block 6.x-2.x-dev, xxxx-xx-xx (development release)
------------------------------
- #957362 by blixxxa: Add Swedish translation
- Fix theme hook suggestions for non-numeric block deltas

Menu Block 6.x-2.3, 2010-03-24
------------------------------
- #739282: Users with "administer menu" privileges can exploit XSS vulnerability
- #343061 by sun and JohnAlbin: CSS styling breaks form layout
- #345552 by Dmitriy.trt: Inconsistent display of starting level set to children
  of active item
- #474784: Menu title as link is incorrectly always marked as in active trail
- #540842 by JohnAlbin and agentrickard: Add option to use current page's
  selected menu
- #580348: Add administrative title to config form to help organize blocks
- #350029: Add theme hook suggestions for all theme function calls
- #741284 by JohnAlbin, sdboyer, and hefox: Add "menu tree" content types to
  Chaos Tools/Panels.
- #741284 by JohnAlbin and hefox: Add menu_block_get_config() and
  menu_block_configure_form() to make the configuration form reusable by
  separating it from the Block API functions.
- #553842 by apodran and JohnAlbin: split() is deprecated in PHP 5.3
- #398888: "exanded" elements of a menu-item-rooted tree aren't expanded
- #703968 by hefox and JohnAlbin: Add menu_tree_build() to allow reuse of tree
  building code outside of blocks
- Refactored API for menu_block_get_title() and menu_block_set_title()
- Added HOOK_menu_block_tree_alter() to allow direct tree manipulation
- by Denes Szabo and Zoltan Balogh: Added Hungarian translation
- Make default menu be "Primary links" instead of "Navigation"
- #378206 by sbordage: Added French translation
- #345419: Add option for menu title as link
- #347805: Add delta to variables and classes in menu-block-wrapper.tpl

Menu Block 6.x-2.2, 2008-12-16
------------------------------
- #342498: Give unique class to depth-limited leaves that have children
- #341436: Depth-limited leaves that have children get "collapsed" icon