@@ -384,13 +384,24 @@ function _menu_block_block_save($delta, $edit) {
  *   The settings form used by Menu block.
  */
 function menu_block_admin_settings_form($form_state) {
-  // Grab all the menus.
-  $menus = menu_block_get_all_menus();
-  unset($menus[MENU_TREE__CURRENT_PAGE_MENU]);
-  $total_menus = count($menus);
+  // Retrieve core's menus.
+  $menus = menu_get_menus();
+  // Include book support.
+  if (module_exists('book')) {
+    module_load_include('inc', 'menu_block', 'menu_block.book');
+  }
+  // Retrieve all the menu names provided by hook_menu_block_get_sort_menus().
+  $menus = array_merge($menus, module_invoke_all('menu_block_get_sort_menus'));
+  asort($menus);
 
   // Load stored configuration.
   $menu_order = variable_get('menu_block_menu_order', array('primary-links' => '', 'secondary-links' => ''));
+  // Remove any menus no longer in the list of all menus.
+  foreach (array_keys($menu_order) as $menu) {
+    if (!isset($menus[$menu])) {
+      unset($menu_order[$menu]);
+    }
+  }
 
   // Merge the saved configuration with any un-configured menus.
   $all_menus = $menu_order + $menus;
@@ -406,6 +417,7 @@ function menu_block_admin_settings_form($form_state) {
   );
 
   $order = 0;
+  $total_menus = count($all_menus);
   foreach (array_keys($all_menus) as $menu_name) {
     $form['menu_order'][$menu_name] = array(
       'title' => array(
