@@ -36,5 +36,26 @@ function hook_get_menus() {
 }
 
 /**
+ * Return a list of menus to use on menu block's settings form.
+ *
+ * Menu block's settings page sorts menus for use with its "the menu selected by
+ * the page" option.
+ *
+ * @return
+ *   An array containing the menus' machine names as keys with their menu titles
+ *   as values. The key may optionally be a regular expression to match several
+ *   menus at a time; see book_menu_block_get_sort_menus() for an example.
+ */
+function hook_menu_block_get_sort_menus() {
+  $menus = array();
+  // For each menu, add the following information:
+  $menus['menu_name'] = 'menu title';
+  // Optionally, add a regular expression to match several menus at once.
+  $menus['/^my\-menus\-.+/'] = t('My menus');
+
+  return $menus;
+}
+
+/**
  * @} End of "addtogroup hooks".
  */
