@@ -238,6 +238,14 @@ function menu_tree_build($config) {
     // Retrieve the list of available menus.
     $menu_order = variable_get('menu_block_menu_order', array('primary-links' => '', 'secondary-links' => ''));
 
+    // Check for regular expressions as menu keys.
+    $patterns = array();
+    foreach (array_keys($menu_order) as $pattern) {
+      if ($pattern[0] == '/') {
+        $patterns[$pattern] = NULL;
+      }
+    }
+
     // Retrieve all the menus containing a link to the current page.
     $result = db_query("SELECT menu_name FROM {menu_links} WHERE link_path = '%s'", $_GET['q'] ? $_GET['q'] : '<front>');
     while ($item = db_fetch_array($result)) {
@@ -246,9 +254,24 @@ function menu_tree_build($config) {
         // Mark the menu.
         $menu_order[$item['menu_name']] = MENU_TREE__CURRENT_PAGE_MENU;
       }
+      else {
+        // Check if the menu matches one of the available patterns.
+        foreach (array_keys($patterns) as $pattern) {
+          if (preg_match($pattern, $item['menu_name'])) {
+            // Mark the menu.
+            $menu_order[$pattern] = MENU_TREE__CURRENT_PAGE_MENU;
+            // Store the actual menu name.
+            $patterns[$pattern] = $item['menu_name'];
+          }
+        }
+      }
     }
     // Find the first marked menu.
     $config['menu_name'] = array_search(MENU_TREE__CURRENT_PAGE_MENU, $menu_order);
+    // If a pattern was matched, use the actual menu name instead of the pattern.
+    if (!empty($patterns[$config['menu_name']])) {
+      $config['menu_name'] = $patterns[$config['menu_name']];
+    }
     $config['parent_mlid'] = 0;
 
     // If no menu link was found, don't display the block.
