@@ -1,5 +1,6 @@
 Menu Block 6.x-2.x-dev, xxxx-xx-xx (development release)
 ------------------------------
+- #825132: Add hook_menu_block_get_sort_menus() for improved performand and UX of book integration
 - #957362 by blixxxa: Add Swedish translation
 - Fix theme hook suggestions for non-numeric block deltas
 
